--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: [ "thefortressapp.pro" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "thefortressapp.pro" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
