--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,11 +4,11 @@ name: CI
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
+  # Triggers the workflow on push or pull request events but only for the "thefortressapp.pro" branch
   push:
-    branches: [ "main" ]
+    branches: [ "thefortressapp.pro" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "thefortressapp.pro" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
